--- a/Client/Chart/style.css
+++ b/Client/Chart/style.css
@@ -1,13 +1,9 @@
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-        }
-                
         body {
-            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            font-family: 'Inter', sans-serif;
             background: white;
             min-height: 100vh;
+            margin: 0;
+            padding: 0;
         }
 
         header {
