update button style chart cont

--- a/Client/CNTR/Chart/style.css
+++ b/Client/CNTR/Chart/style.css
@@ -540,8 +540,7 @@
         }
 
         .btn-apply-schedule,
-        .btn-reset-schedule,
-        .btn-publish, {
+        .btn-reset-schedule, {
             padding: 10px 20px;
             border: none;
             border-radius: 6px;
